descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 20XX-XX-XX  Release 7.30.4                                     ---
----------------------------------------------------------------------

* removed default xXyYzZ0 rate rotation key bindings - Sean Morrison
* improved tessellation of nearly coplanar surfaces - John Anderson
* fixed display of annotations on Windows - Daniel Roßberg
* fixed rtedge and rtwizard occlusion object edge bug - Sean Morrison
* rt* tools no longer force outputs to be read-only - Sean Morrison
* fixed 'burst' crash when run without options - Sean Morrison
* changed rtweight to not truncate long pathnames - Sean Morrison
* added new ball bearing example geometry model - Sean Morrison
* added new manual page for the clone command - Sean Morrison


----------------------------------------------------------------------
--- 2019-04-03  Release 7.30.2                                     ---
----------------------------------------------------------------------

* added new manual page for the clone command - Sean Morrison
* fixed crash calculating dsp bounding boxes - Sean Morrison
* fixed Windows temporary file removal for MGED commands (red, etc.)
	- Cliff Yapp
* fixed librt NURBS cache issues under high load conditions
	- Sean Morrison, Cliff Yapp
* added a copy subcommand to MGED's attr command - Cliff Yapp
* fixed a locking condition in MGED's rtcheck command - Cliff Yapp
* added support for >=< prefixes for mater -d get options Cliff Yapp
* fixed brlman lookup location of html manual pages - Cliff Yapp
* fixed rt -t top-to-bottom parallel rendering option  Sean Morrison
* added a 'flip' normals command to MGED's brep command - Cliff Yapp
* added rtweight support for in-.g density information - Cliff Yapp
* improved usability of vol primitives w/ missing data - Sean Morrison

